# task

./: .gitlab-ci.yml  CMakeLists.txt  Readme.md  task.cpp  task.hpp  test.cpp
